CRICKSTATS/force-app/main/default/objects/Player__c/Player__c.object-meta.xml
<CustomObject>
<description>Cricket player master record with automatically rolled-up career statistics.</description>
<label>Player</label>
<nameField><label>Player Name</label><trackHistory>false</trackHistory><type>Text</type></nameField>
<pluralLabel>Players</pluralLabel>
<sharingModel>ReadWrite</sharingModel>
</CustomObject>