CRICKSTATS/force-app/main/default/objects/Player__c/fields/AVG_Score__c.field-meta.xml
<CustomField>
<fullName>AVG_Score__c</fullName>
<description>Average runs per match = Total Runs / Matches Played</description><label>AVG Score</label>
<formula>IF(
Matches_Played__c &gt; 0,
Total_Runs__c / Matches_Played__c,
0
)</formula>
<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
<precision>18</precision>
<scale>2</scale>
<type>Number</type>
</CustomField>