CRICKSTATS/force-app/main/default/objects/Player__c/fields/Batting_Style__c.field-meta.xml
<CustomField>
<fullName>Batting_Style__c</fullName>
<label>Batting Style</label>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Right-Handed</fullName><default>false</default><label>Right-Handed</label></value><value><fullName>Left-Handed</fullName><default>false</default><label>Left-Handed</label></value></valueSetDefinition></valueSet><trackTrending>false</trackTrending>
<type>Picklist</type>
</CustomField>