CRICKSTATS/force-app/main/default/objects/Player__c/fields/Bowling_Style__c.field-meta.xml
<CustomField>
<fullName>Bowling_Style__c</fullName>
<label>Bowling Style</label>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Right-Arm Fast</fullName><default>false</default><label>Right-Arm Fast</label></value><value><fullName>Left-Arm Fast</fullName><default>false</default><label>Left-Arm Fast</label></value><value><fullName>Right-Arm Medium</fullName><default>false</default><label>Right-Arm Medium</label></value><value><fullName>Left-Arm Medium</fullName><default>false</default><label>Left-Arm Medium</label></value><value><fullName>Right-Arm Spin</fullName><default>false</default><label>Right-Arm Spin</label></value><value><fullName>Left-Arm Spin</fullName><default>false</default><label>Left-Arm Spin</label></value></valueSetDefinition></valueSet><trackTrending>false</trackTrending>
<type>Picklist</type>
</CustomField>