CRICKSTATS/force-app/main/default/objects/Player__c/fields/Date_of_Birth__c.field-meta.xml
<CustomField>
<fullName>Date_of_Birth__c</fullName>
<label>Date of Birth</label>
<type>Date</type>
</CustomField>