CRICKSTATS/force-app/main/default/objects/Player__c/fields/Matches_Played__c.field-meta.xml
<CustomField>
<fullName>Matches_Played__c</fullName>
<description>COUNT of Match Performances</description><label>Matches Played</label>
<summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
<summaryOperation>count</summaryOperation>
<type>Summary</type>
</CustomField>