CRICKSTATS/force-app/main/default/objects/Player__c/fields/Nationality__c.field-meta.xml
<CustomField>
<fullName>Nationality__c</fullName>
<label>Nationality</label>
<valueSet><restricted>false</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>India</fullName><default>false</default><label>India</label></value><value><fullName>Australia</fullName><default>false</default><label>Australia</label></value><value><fullName>England</fullName><default>false</default><label>England</label></value><value><fullName>South Africa</fullName><default>false</default><label>South Africa</label></value><value><fullName>New Zealand</fullName><default>false</default><label>New Zealand</label></value><value><fullName>Pakistan</fullName><default>false</default><label>Pakistan</label></value><value><fullName>Sri Lanka</fullName><default>false</default><label>Sri Lanka</label></value><value><fullName>Bangladesh</fullName><default>false</default><label>Bangladesh</label></value><value><fullName>West Indies</fullName><default>false</default><label>West Indies</label></value><value><fullName>Afghanistan</fullName><default>false</default><label>Afghanistan</label></value></valueSetDefinition></valueSet><trackTrending>false</trackTrending>
<type>Picklist</type>
</CustomField>