CRICKSTATS/force-app/main/default/objects/Player__c/fields/Number_of_50s__c.field-meta.xml
<CustomField>
<fullName>Number_of_50s__c</fullName>
<description>Innings with 50 to 99 runs</description><label>Number of 50's</label>
<summaryFilterItems><field>Match_Performance__c.Runs_Scored__c</field><operation>greaterOrEqual</operation><value>50</value></summaryFilterItems>
<summaryFilterItems><field>Match_Performance__c.Runs_Scored__c</field><operation>lessThan</operation><value>100</value></summaryFilterItems>
<summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
<summaryOperation>count</summaryOperation>
<type>Summary</type>
</CustomField>