CRICKSTATS/force-app/main/default/objects/Player__c/fields/Profile_Picture__c.field-meta.xml
<CustomField>
<fullName>Profile_Picture__c</fullName>
<description>Rich text area - insert the player's photo using the image button.</description><label>Profile Picture</label>
<length>32768</length>
<type>Html</type>
</CustomField>