CRICKSTATS/force-app/main/default/objects/Player__c/fields/Role__c.field-meta.xml
<CustomField>
<fullName>Role__c</fullName>
<label>Role</label>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Batsman</fullName><default>false</default><label>Batsman</label></value><value><fullName>Bowler</fullName><default>false</default><label>Bowler</label></value><value><fullName>Batsman &amp; Wicket Keeper</fullName><default>false</default><label>Batsman &amp; Wicket Keeper</label></value><value><fullName>All Rounder</fullName><default>false</default><label>All Rounder</label></value></valueSetDefinition></valueSet><trackTrending>false</trackTrending>
<type>Picklist</type>
</CustomField>