CRICKSTATS/force-app/main/default/objects/Player__c/fields/Total_4s__c.field-meta.xml
<CustomField>
<fullName>Total_4s__c</fullName>
<label>Total 4's</label>
<summarizedField>Match_Performance__c.Fours__c</summarizedField>
<summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
<summaryOperation>sum</summaryOperation>
<type>Summary</type>
</CustomField>