CRICKSTATS/force-app/main/default/objects/Player__c/fields/Total_Overs__c.field-meta.xml
<CustomField>
<fullName>Total_Overs__c</fullName>
<label>Total Overs</label>
<summarizedField>Match_Performance__c.Overs_Bowled__c</summarizedField>
<summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
<summaryOperation>sum</summaryOperation>
<type>Summary</type>
</CustomField>