CRICKSTATS/force-app/main/default/objects/Player__c/fields/Total_Runs__c.field-meta.xml
<CustomField>
<fullName>Total_Runs__c</fullName>
<label>Total Runs</label>
<summarizedField>Match_Performance__c.Runs_Scored__c</summarizedField>
<summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
<summaryOperation>sum</summaryOperation>
<type>Summary</type>
</CustomField>