CRICKSTATS/force-app/main/default/objects/Player__c/fields/Total_Wickets__c.field-meta.xml
<CustomField>
<fullName>Total_Wickets__c</fullName>
<label>Total Wickets</label>
<summarizedField>Match_Performance__c.Wickets_Taken__c</summarizedField>
<summaryForeignKey>Match_Performance__c.Player__c</summaryForeignKey>
<summaryOperation>sum</summaryOperation>
<type>Summary</type>
</CustomField>