CRICKSTATS/force-app/main/default/objects/Player__c/validationRules/DOB_Not_In_Future.validationRule-meta.xml
<ValidationRule>
<fullName>DOB_Not_In_Future</fullName>
<active>true</active>
<description>Date of Birth cannot be in the future.</description>
<errorConditionFormula>Date_of_Birth__c &gt; TODAY()</errorConditionFormula>
<errorDisplayField>Date_of_Birth__c</errorDisplayField>
<errorMessage>Date of Birth cannot be in the future.</errorMessage>
</ValidationRule>