CRICKSTATS/force-app/main/default/objects/Player__c/validationRules/Player_Number_Required.validationRule-meta.xml
<ValidationRule>
<fullName>Player_Number_Required</fullName>
<active>true</active>
<description>Player Number is required.</description>
<errorConditionFormula>ISBLANK(Player_Number__c)</errorConditionFormula>
<errorDisplayField>Player_Number__c</errorDisplayField>
<errorMessage>Player Number is required.</errorMessage>
</ValidationRule>