CRICKSTATS/force-app/main/default/objects/Player__c/validationRules/Role_Required.validationRule-meta.xml
<ValidationRule>
<fullName>Role_Required</fullName>
<active>true</active>
<description>Please select the player's Role.</description>
<errorConditionFormula>ISBLANK(TEXT(Role__c))</errorConditionFormula>
<errorDisplayField>Role__c</errorDisplayField>
<errorMessage>Please select the player's Role.</errorMessage>
</ValidationRule>