CRICKSTATS/force-app/main/default/objects/Player__c/validationRules/Team_Required.validationRule-meta.xml
<ValidationRule>
<fullName>Team_Required</fullName>
<active>true</active>
<description>Please select a Team.</description>
<errorConditionFormula>ISBLANK(TEXT(Team__c))</errorConditionFormula>
<errorDisplayField>Team__c</errorDisplayField>
<errorMessage>Please select a Team.</errorMessage>
</ValidationRule>